fix(Menu): increase z-index for improved visibility of menu elements

--- a/src/components/Menu/index.module.css
+++ b/src/components/Menu/index.module.css
@@ -38,7 +38,7 @@
   overflow: hidden;
   pointer-events: none;
   transition: opacity 0.2s;
-  z-index: 2;
+  z-index: 10;
 }
 
 .drawer {
